update to match streamlit version

--- a/app/static/about.html
+++ b/app/static/about.html
@@ -11,17 +11,23 @@
 <img class='logo' src="GoAnalog.png">
 <div class="about">
 <h3>About</h3>
-    <p>Hi! I'm Brian, and I developed this tool because I really love games. The code will soon be available on <a href="https://github.com/BrianWilliamSmith/">Github</a>.</p>
+    <p>Hi! I'm Brian, and I developed this tool because I really love games. The code is available on <a href="https://github.com/BrianWilliamSmith/Insight-Project-board-game-recommender">Github</a>.</p>
 <h3> Instructions</h3>
-    <p>The app requires two inconvenient things to access your games and make recommendations:</p>
+    <p>The app requires two slightly inconvenient things to access your games and make recommendations:</p>
 <ul><li>Your steam id (<a href="https://support.ubisoft.com/en-GB/Faqs/000027522/Finding-your-Steam-ID?fallback=en_GB">oof -- kind of a pain</a>)</li>
     <li>A steam profile set to public with shared game details</li></ul>
 <p>The second one is unavoidable. A few years ago, Valve changed the default profile settings to hidden. Here's how to change them back:</p>
 <ol><li>Sign into Steam</li>
     <li>Click on your profile name in the upper right corner and select "View My Profile"</li>
     <li>Select "Edit Profile > "My Privacy Settings"</li>
-    <li>Change profile visibility and game details to "public"</br>(The app needs to know game playtime, so make sure you don't hide that!)</li>
-</ol>
+    <li>Change profile visibility and game details to "public"</br>(The app needs to know game playtime, so make sure you don't hide that!)</li></ol>
+<h3>More steam ids for testing</h3>
+    <p>Here are some steam ids that have (at the time of writing) publicly accessible profiles:</p>
+    <ul><li>76561198018010017</li>
+    <li>76561198029016376</li>
+    <li>76561198011832660</li>
+    <li>76561198312338396</li>
+    <li>76561197969480861</li></ul>
 </div>
 </body>
 </html>
